--- a/humor.html
+++ b/humor.html
@@ -42,9 +42,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Прайс - Самопізнання через Архетипи | Я є</title>
-    <meta name="description" content="Вартість доступу до Telegram-каналу, окремих інструментів та індивідуальних консультацій від Я є. Знижки для військових, вчителів, пенсіонерів.">
-    <meta name="keywords" content="прайс, самопізнання, архетипи, консультації, гайди, знижки">
+    <title>Гумор - Самопізнання через Архетипи | Я є</title>
+    <meta name="description" content="Гумор про архетипи та самопізнання: анекдоти, внутрішній голос і сміх із собою. Від Я є з любов’ю до іронії.">
+    <meta name="keywords" content="гумор, архетипи, самопізнання, анекдоти, іронія">
     <meta name="robots" content="index, follow">
     <style>
         body { 
@@ -118,7 +118,7 @@
             font-size: 1.125rem; 
             margin-bottom: 1rem; 
         }
-        ul, ol { 
+        ul { 
             list-style-type: none; 
             text-align: left; 
             max-width: 600px; 
@@ -133,12 +133,12 @@
             padding: 1rem; 
             text-align: center; 
         }
-        .price-section { 
+        .humor-section { 
             max-width: 800px; 
             margin: 0 auto; 
             text-align: left; 
         }
-        .price-section p { 
+        .humor-section p { 
             font-size: 1.125rem; 
             line-height: 1.6; 
         }
@@ -183,44 +183,34 @@
 
     <section class="bg-gradient-to-r text-white section">
         <div class="container">
-            <h2>Прайс</h2>
-            <p>Якщо коротко і чесно</p>
+            <h2>Гумор</h2>
+            <p>Ну бо скільки можна серйозно?</p>
         </div>
     </section>
 
     <section class="bg-gray-50 section">
         <div class="container">
-            <div class="price-section">
-                <p>Це не супермаркет і не шоу.<br>Тут ти не купуєш “продукт” — ти заходиш у простір, де можна глянути в себе.<br>Без води, без унітазів з золота, але з душею і змістом.</p>
+            <div class="humor-section">
+                <p>Світ складний, внутрішній шлях ще складніший.<br>А якщо без гумору — то або в дурку, або в TikTok.<br>Ми обрали третій варіант — посміятися. Іноді з себе. Частіше — з себе.</p>
 
-                <h3>💬 Що ти отримаєш у Telegram-каналі</h3>
+                <h3>😄 Анекдоти з життя (і не тільки)</h3>
                 <ul>
-                    <li>щотижневі практики</li>
-                    <li>доступ до інструментів</li>
-                    <li>підтримку й спілкування, коли це справді потрібно</li>
-                    <li>місце, де можна не прикидатися</li>
+                    <li>— Сину, ким ти хочеш стати, коли виростеш?<br>— Самопізнаним.<br>— Господи, краще б алкоголіком…</li>
+                    <li>— Мамо, я змерз чи хочу їсти?<br>— Що?<br>— Ярослав питає… Опікун включилася.</li>
+                    <li>— Слухай, а ти хто за архетипом?<br>— Я кішка.<br>— Чому?<br>— Не знаю, йди геть.</li>
+                    <li>— Я в архетипах розбираюсь!<br>— Ну давай, хто я?<br>— А ти Кріса.<br>— Я шо?!<br>— Той, що вижив.</li>
+                    <li>Дві бабки дивляться телевізор.<br>Ведучий каже: “Такий-то завів блог у Твіттері.”<br>Одна бабка недочула:<br>— Що він сказав?<br>— Та каже, завів блох у світері… наркоман, мабуть.</li>
+                    <li>Студенти філософського вимірюють стовп.<br>Один лізе вгору з рулеткою.<br>Йде інженер, витягує стовп з ями, кладе на землю, міряє — 5 метрів.<br>Студенти:<br>— Ну от… Довжину він нам сказав, а висоту як ми тепер дізнаємось?</li>
                 </ul>
-                <p><strong>300 грн/місяць</strong></p>
 
-                <h3>🧰 Окремі інструменти</h3>
-                <p>гайд-листи, тести, методики</p>
-                <p><strong>200 грн одноразово</strong></p>
-
-                <h3>👥 Індивідуальні консультації</h3>
-                <p>одна година щирої розмови, без “псевдопсихології”, з реальністю і теплом</p>
-                <p><strong>800 грн/година</strong></p>
-
-                <h3>🎖️ Знижки — бо є речі, що важливіші за гроші</h3>
-                <p>Я не міністерство, але розумію ціну людського вкладу. Тому:</p>
+                <h3>🤡 Внутрішній голос:</h3>
                 <ul>
-                    <li>Військовим — 40% знижка</li>
-                    <li>Вчителям — 30% знижка</li>
-                    <li>Пенсіонерам — 30% (якщо такі справді з’являться — буду приємно здивований)</li>
+                    <li>— А раптом у тебе нічого не вийде?<br>— Та я не раптом, я стабільно!</li>
+                    <li>— Сьогодні ми працюємо над внутрішньою дитиною.<br>— Моя знову хоче піцу й ображається, якщо її не похвалити.</li>
                 </ul>
-                <p>Якщо ти один з них — просто напиши мені.<br>Документально нічого не треба, вірю на слово.<br>Хто бреше — той і без знижки собі знайде карму.</p>
 
-                <h3>📩 Якщо є питання — пиши</h3>
-                <p>Я людина. Не чат-бот.<br>Відповім, поясню, домовимось. Все по-людськи.</p>
+                <h3>🙃 Маєш свій прикол?</h3>
+                <p>Пиши — вставимо.<br>Головне правило: не бути як усі, не боятись сміятись, і не втратити себе навіть у дурості.</p>
             </div>
         </div>
     </section>
