Додано оновлений футер до всіх сторінок

--- a/about.html
+++ b/about.html
@@ -130,10 +130,15 @@
     </section>
 
     <!-- Футер -->
-    <footer class="bg-indigo-900 text-white text-center p-4">
-        <p>© 2025 Я є. Усі права захищено.</p>
-    </footer>
-
+    <footer style="background: #4b0082; color: white; padding: 1rem; text-align: center;">
+  <p>© 2025 Я є. Усі права захищено.</p>
+  <p class="mt-2" style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
+    <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
+      Карпатська Грибниця
+    </a>
+  </p>
+</footer>
+ 
     <script>
         document.addEventListener('contextmenu', function(e) { e.preventDefault(); });
         document.addEventListener('selectstart', function(e) { e.preventDefault(); });
