--- a/contact.html
+++ b/contact.html
@@ -167,9 +167,14 @@
             <p>Якщо не відповів — значить читаю. Якщо довго не відповідаю — значить думаю. Якщо зовсім не відповів — можливо, ти не з того всесвіту. Але спробуй ще раз.</p>
         </div>
     </section>
-
-    <footer>
-        <p>© 2025 Я є. Усі права захищено.</p>
-    </footer>
+   
+<footer style="background: #4b0082; color: white; padding: 1rem; text-align: center;">
+  <p>© 2025 Я є. Усі права захищено.</p>
+  <p class="mt-2" style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
+    <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
+      Карпатська Грибниця
+    </a>
+  </p>
+</footer>
 </body>
 </html>
