--- a/tools.html
+++ b/tools.html
@@ -216,7 +216,7 @@
 
             <h3>Архетипи – Відгук тіла</h3>
             <h3>Герой</h3>
-            <p>Він завжди в бою. Він встає після кожного падіння, і його шлях — це боротьба за правду, справедливість і вищі ідеали. Його серце палає від жагою до перемоги, і кожен крок — це вибір: пройти через біль чи залишити все позаду. Він завжди прагне бути першим і кращим, і цей пошук робить його сильнішим, але чи вистачить йому сил зберегти людяність у своїй перемозі?</p>
+            <p>Він завжди в бою. Він встає після кожного падіння, і його шлях — це боротьба за правду, справедливість і вищі ідеали. Його серце палає жагою до перемоги, і кожен крок — це вибір: пройти через біль чи залишити все позаду. Він завжди прагне бути першим і кращим, і цей пошук робить його сильнішим, але чи вистачить йому сил зберегти людяність у своїй перемозі?</p>
 
             <h3>Мудрець</h3>
             <p>Він бачить більше, ніж інші. Його розум проникливий, і він не боїться шукати відповіді в глибинах власної душі. Він не женеться за славою і не потребує визнання — його мудрість не вимірюється у словах, а у тиші. Але його самотність, часом, здається важчою за будь-який розум.</p>
@@ -252,7 +252,7 @@
             <p>Легка, тиха, глибока. Вона ніби з іншого світу — чуйна, ніжна, але надзвичайно сильна всередині. Її сила не в конфронтації, а в здатності залишатися собою у світі, де всі кричать. Вона не йде проти, вона йде своєю стежкою, і саме тому ніколи не заблукає. Її присутність — це тиша, в якій чути найважливіше.</p>
 
             <h3>Кішка</h3>
-            <p>Вона нічиє, але завжди поруч. Її не можна підкорити. Вона з’являється, коли хоче, і зникає без пояснень. Її внутрішній світ — таємниця, яку не кожному відкрито. Але якщо вона вибрала тебе — це не випадково. Бо вона бачить крізь усе — і не боїться самотності.</p>
+            <p>Вона нічия, але завжди поруч. Її не можна підкорити. Вона з’являється, коли хоче, і зникає без пояснень. Її внутрішній світ — таємниця, яку не кожному відкрито. Але якщо вона вибрала тебе — це не випадково. Бо вона бачить крізь усе — і не боїться самотності.</p>
 
             <h3>Орел</h3>
             <p>Він бачить згори. Його сила — у погляді, що охоплює простір і суть. Він не занурюється в дрібниці, не втрачає себе у деталях. Він терплячий, мовчазний, небезпечний. Його політ — це не втеча, це спостереження. І коли він зривається в пікірування — це завжди точно в ціль.</p>
@@ -276,8 +276,13 @@
         </div>
     </section>
 
-    <footer>
-        <p>© 2025 Я є. Усі права захищено.</p>
-    </footer>
+    <footer style="background: #4b0082; color: white; padding: 1rem; text-align: center;">
+  <p>© 2025 Я є. Усі права захищено.</p>
+  <p class="mt-2" style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
+    <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
+      Карпатська Грибниця
+    </a>
+  </p>
+ </footer>
 </body>
 </html>
