Оновлено contact.html з акцією та blog.html з новою статтею 'Подивитись на себе'

--- a/contact.html
+++ b/contact.html
@@ -165,16 +165,27 @@
             <p>Електронна пошта: korvin71@meta.ua</p>
             <p>Закритий канал: <a href="https://t.me/+mlK1hJzQynZhNDNi">Я Є — Приватна територія</a></p>
             <p>Якщо не відповів — значить читаю. Якщо довго не відповідаю — значить думаю. Якщо зовсім не відповів — можливо, ти не з того всесвіту. Але спробуй ще раз.</p>
+
+            <h2>Акція для перших 100 учасників Telegram-каналу “Я є”</h2>
+            <p>Ще немає контенту. Ще тихо. Але вже є простір.</p>
+            <p>І саме ви можете стати тими, хто буде в його основі.</p>
+            <p>Перші 100 — вхід безкоштовний.</p>
+            <p>Без зобов’язань. Просто присутність.</p>
+            <p>Бо це не про оплату — це про людей, які відчули.</p>
+            <p>Згодом доступ буде платним, бо в канал вкладатиметься енергія, час і практика.</p>
+            <p>Але ви — перші.</p>
+            <p>І я це пам’ятаю.</p>
+            <p>Приєднуйся до каналу: <a href="https://t.me/+mlK1hJzQynZhNDNi">Я Є — Приватна територія</a></p>
         </div>
     </section>
-   
-<footer style="background: #4b0082; color: white; padding: 1rem; text-align: center;">
-  <p>© 2025 Я є. Усі права захищено.</p>
-  <p class="mt-2" style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
-    <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
-      Карпатська Грибниця
-    </a>
-  </p>
-</footer>
+
+    <footer>
+        <p>© 2025 Я є. Усі права захищено.</p>
+        <p style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
+            <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
+                Карпатська Грибниця
+            </a>
+        </p>
+    </footer>
 </body>
 </html>
