Оновлено всі сторінки: змінено назву пункту меню на 'Як жити далі?'

--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Про мене - Шукач Архетипів | Я є</title>
-    <meta name="description" content="Шукач, який допомагає відкрити твої архетипи через особистий досвід і практичні інструменти на проєкті Я є.">
+    <title>Про мене -Віктор, Шукач Архетипів | Я є</title>
+    <meta name="description" content="Віктор — Шукач, який допомагає відкрити твої архетипи через особистий досвід і практичні інструменти на проєкті Я є.">
     <meta name="keywords" content="про мене, самопізнання, архетипи, шукач, психологія, інструменти">
     <meta name="robots" content="index, follow">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -113,7 +113,7 @@
                 <li><a href="archetypes.html" class="hover:underline">Про архетипи</a></li>
                 <li><a href="about.html" class="hover:underline">Про мене</a></li>
                 <li><a href="tools.html" class="hover:underline">Інструменти</a></li>
-                <li><a href="blog.html" class="hover:underline">Блог</a></li>
+                <li><a href="blog.html" class="hover:underline">Як жити далі?</a></li>
                 <li><a href="humor.html" class="hover:underline">Гумор</a></li>
                 <li><a href="price.html" class="hover:underline">Прайс</a></li>
                 <li><a href="contact.html" class="hover:underline">Контакти</a></li>
@@ -170,13 +170,13 @@
 
     <!-- Футер -->
     <footer style="background: #4b0082; color: white; padding: 1rem; text-align: center;">
-        <p>© 2025 Я є. Усі права захищено.</p>
-        <p class="mt-2" style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
-            <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
-                Карпатська Грибниця
-            </a>
-        </p>
-    </footer>
+  <p>© 2025 Я є. Усі права захищено.</p>
+  <p class="mt-2" style="font-size: 0.875rem; margin-top: 0.5rem;">З душею рекомендуємо: 
+    <a href="https://t.me/CRPT_shroomery" style="color: #FFD700; text-decoration: underline;" target="_blank">
+      Карпатська Грибниця
+    </a>
+  </p>
+</footer>
  
     <script>
         document.addEventListener('contextmenu', function(e) { e.preventDefault(); });
